Subir todos los pngs de los modelos 3d, cambiar logo, quitar subititulo aboutus,

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg" href="/logoCircularNegro.svg" /> -->
+    <!-- <link rel="icon" type="image/png" href="/logoCiruclarNegro.ico"> -->
+    <link rel="icon" type="image/png" href="/logoCircularNegro.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Memòries En Cendra</title>
   </head>
   <body>
     <div id="root"></div>
