Cambiar color logo, corregir nombre, cambiar color web

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg" href="/logoCircularNegro.svg" /> -->
-    <!-- <link rel="icon" type="image/png" href="/logoCiruclarNegro.ico"> -->
-    <link rel="icon" type="image/png" href="/logoCircularNegro.ico">
+    <!-- <link rel="icon" type="image/png" href="/logoCircularNegro.ico"> -->
+    <link rel="icon" type="image/png" href="/logoCircularAmarillo.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memòries En Cendra</title>
