--- a/index.html
+++ b/index.html
@@ -1,15 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/png" href="/logoCircularNegro.ico"> -->
-    <link rel="icon" type="image/png" href="/logoCircularAmarillo.ico">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memòries En Cendra</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- Meta básicos -->
+  <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Título y descripción -->
+  <meta name="description" content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
+
+
+  <!-- Keywords (opcional, ya no es tan relevante para SEO) -->
+  <meta name="keywords" content="Fallas VR, Fallas Realidad Virtual, FallesVR, Memories en cendra, Valencia Game City, VR Valencia">
+
+  <!-- Favicon -->
+  <!-- <link rel="icon" href="/favicon.ico"> -->
+
+  <!-- Open Graph para redes sociales -->
+  <meta property="og:title" content="Memòries en Cendra">
+  <meta property="og:description"
+    content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
+  <meta property="og:url" content="https://memoriesencendra.es">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://memoriesencendra.es/logoCircularAmarillo.ico">
+
+  <!-- Twitter Cards (para compartir en Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Memòries en Cendra">
+  <meta name="twitter:description" content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
+  <meta name="twitter:image" content="https://memoriesencendra.es/logoCircularAmarillo.ico">
+  <meta name="twitter:site" content="@cuentaTwitter">
+
+  <!-- Meta para móviles -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Meta SEO y accesibilidad -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Memòries en Cendra">
+  <meta name="copyright" content="© 2024 Memòries en Cendra. Todos los derechos reservados.">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://memoriesencendra.es">
+
+  <link rel="icon" type="image/png" href="/logoCircularAmarillo.ico">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Memòries En Cendra</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
