--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
   <meta property="og:url" content="https://memoriesencendra.es">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://memoriesencendra.es/logoCircularAmarillo.ico">
+  <meta property="og:image" content="https://memoriesencendra.es/logoCircularAmarillo.png">
 
   <!-- Twitter Cards (para compartir en Twitter) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Memòries en Cendra">
   <meta name="twitter:description" content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
-  <meta name="twitter:image" content="https://memoriesencendra.es/logoCircularAmarillo.ico">
+  <meta name="twitter:image" content="https://memoriesencendra.es/logoCircularAmarillo.png">
   <meta name="twitter:site" content="@cuentaTwitter">
 
   <!-- Meta para móviles -->
@@ -46,7 +46,7 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://memoriesencendra.es">
 
-  <link rel="icon" type="image/png" href="/logoCircularAmarillo.ico">
+  <link rel="icon" type="image/png" href="/logoCircularAmarillo.png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Memòries En Cendra</title>
