--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <!-- Título y descripción -->
   <meta name="description" content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
 
+  <meta name="description" content="Memòries en Cendra es un juego VR inmersivo que revive las Fallas valencianas con su historia, tradiciones y emocionantes espectáculos.">
+
 
   <!-- Keywords (opcional, ya no es tan relevante para SEO) -->
   <meta name="keywords" content="Fallas VR, Fallas Realidad Virtual, FallesVR, Memories en cendra, Valencia Game City, VR Valencia">
