--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-
   <!-- Meta básicos -->
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Título y descripción -->
-  <meta name="description" content="Memòries en Cendra es un juego VR inmersivo que revive las Fallas valencianas con su historia, tradiciones y emocionantes espectáculos.">
+  <meta name="description" content="Memòries en Cendra es un juego VR inmersivo que revive las Fallas valencianas en una recreacion virtual de valencia">
+
 
 
   <!-- Keywords (opcional, ya no es tan relevante para SEO) -->
@@ -22,7 +23,7 @@
   <!-- Open Graph para redes sociales -->
   <meta property="og:title" content="Memòries en Cendra">
   <meta property="og:description"
-    content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
+    content="Memòries en Cendra es un juego VR inmersivo que revive las Fallas valencianas en una recreacion virtual de valencia">
   <meta property="og:url" content="https://memoriesencendra.es">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://memoriesencendra.es/logoCircularAmarillo.png">
@@ -30,7 +31,7 @@
   <!-- Twitter Cards (para compartir en Twitter) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Memòries en Cendra">
-  <meta name="twitter:description" content="Memòries en Cendra es un videojuego de realidad virtual que sumerge al usuario en una experiencia inmersiva sobre las Fallas, recreando momentos clave de esta tradición valenciana con música, fuegos artificiales y monumentos. Vive la emoción de esta festividad, desde su historia hasta su espectacularidad, a través de una narrativa interactiva y envolvente.">
+  <meta name="twitter:description" content="Memòries en Cendra es un juego VR inmersivo que revive las Fallas valencianas en una recreacion virtual de valencia">
   <meta name="twitter:image" content="https://memoriesencendra.es/logoCircularAmarillo.png">
   <meta name="twitter:site" content="@cuentaTwitter">
 
@@ -44,11 +45,10 @@
   <meta name="copyright" content="© 2024 Memòries en Cendra. Todos los derechos reservados.">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://memoriesencendra.es">
+  <link rel="canonical" href="https://www.memoriesencendra.es">
 
   <link rel="icon" type="image/png" href="/logoCircularAmarillo.png">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Memòries En Cendra</title>
 </head>
 
